--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,8 @@
 #container{
     display: flex;
     flex-wrap: wrap;
-    width: 256px;
-    height: 256px;
-}
-
-#gridDiv {
-    display: flex;
-    flex-direction: row;
-    background: black;
-    height: 16px;
-    width: 16px;
+    align-content: flex-start;
+    height: 500px;
+    width: 500px;
+    border: solid black;
 }
